# pipeline

./: CMakeLists.txt  README.md  main.cpp  pipelineConfig.cmake.in  single_include.json
include/pipeline/: bind.hpp  details.hpp  fn.hpp  for_each.hpp  for_each_async.hpp  fork.hpp  fork_async.hpp  fork_into.hpp  fork_into_async.hpp  from.hpp  pipe.hpp  pipe_pair.hpp  pipeline.hpp  unzip.hpp  unzip_into.hpp  unzip_into_async.hpp
samples/: CMakeLists.txt  for_each.cpp  for_each_async.cpp  for_each_return.cpp  fork_into.cpp  fork_into_variant.cpp  hello_world.cpp  main.cpp  pipe.cpp  pipe_reference.cpp  sum_diff.cpp  sum_diff_async.cpp  unzip_into.cpp  unzip_into_return.cpp  unzip_into_single.cpp  unzip_into_single_functor.cpp
single_include/pipeline/: pipeline.hpp
utils/amalgamate/: amalgamate.py
